# staccato

./: .gitignore  Cargo.toml  init.sh  requirements.txt
music_server/: generate_token.py  main.py  run.py
music_server/auth/models/: Token.py
music_server/config/: BaseConfig.py  DevConfig.py  DevelopmentConfig.py  ProductionConfig.py  TestingConfig.py  __init__.py
music_server/db/: __init__.py
music_server/db/migrations/: migrate.py  v1.py
music_server/tests/integration/: auth.py
music_server/utils/: __init__.py
server/: .gitignore  Cargo.toml
server/db/migrations/v1/: up.sql
server/src/: lib.rs  main.rs
server/tests/: integration_test.rs  integrstion_test.rs
