[package]
name = "staccato"
version = "0.1.0"
authors = ["tyler <tystanish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", features = ["tls"] }
rocket_contrib = "0.4.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
rand = "0.7"
postgres = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
